Update android SDK version

--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -3,7 +3,7 @@ include ':app'
 def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
 def properties = new Properties()
 
-assert localPropertiesFile.exists()
+assert localPropertiesFile.exists(), "local properties not exist"
 localPropertiesFile.withReader("UTF-8") { reader -> properties.load(reader) }
 
 def flutterSdkPath = properties.getProperty("flutter.sdk")
